Update logout; Update Confirm-email
